--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="assets\css\style.css">
 
 <!-- NAV BAR -->
+  <body>
     <nav class="grey darken-4" role="navigation">
       <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo center">
         <h3 class="center" id="welcome" ><font face="Georgia"> Welcome Investors!</font></hf3></a>
